--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   class="my-projects-link"
                   >https://maxdm2021.github.io/goit-js-hw-11/</a
                 >
-                ...........................
+                ............................................
                 <span class="my-projects-bracket">[</span> JavaScript
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -63,7 +63,7 @@
                 <a href="" class="my-projects-link"
                   >In the process of studying...</a
                 >
-                ..................................
+                ..............................................................................
                 <span class="my-projects-bracket">[</span> React.js, Node.js
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -118,10 +118,10 @@
             <h3 class="main-content-title">Education</h3>
             <h4 class="my-work-experience-company"> Prydniprovska State Academy of Civil Engineering and Architecture</h4>
             <h5>industrial and civil construction</h5>
-            <p class="my-work-experience-period">September 2000 - June 2005 <span class="my-work-experience-divider">|</span> Country</p>
+            <p class="my-work-experience-period">September 2000 - June 2005 <span class="my-work-experience-divider">|</span> Ukraine</p>
             <h4 class="my-work-experience-company"> GoIT EdTech-company</h4>
             <h5>Intensive IT courses</h5>
-            <p class="my-work-experience-period">Desember 2021 - May 2022 <span class="my-work-experience-divider">|</span> Country</p>
+            <p class="my-work-experience-period">Desember 2021 - November 2022 <span class="my-work-experience-divider">|</span> Ukraine</p>
 
 
 
