--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <!--main  container-->
