--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <!--sidebar section-->
       <aside class="sidebar-section">
-        <img src="img/foto.jpg" alt="my foto" width="350px" />
+        <img src="img/1.jpg" alt="my foto" width="350px" />
         <!--contacts section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
@@ -194,6 +194,7 @@
             </li>
           </ul>
         </div>
+        <img src="img/foto.jpg" alt="my foto" width="350px"  />
       </aside>
     </div>
   </body>
