--- a/index.html
+++ b/index.html
@@ -40,8 +40,21 @@
                 >
                 https://maxdm2021.github.io/goit-markup-hw-08/
                 </a>
-                ..........................
+                .........................................
                 <span class="my-projects-bracket">[ </span>HTML5, CSS3
+                <span class="my-projects-bracket">]</span>
+              </span>
+            </li>
+            <li class="my-projects-item">
+              <span class="my-projects-text">
+                <a
+                  href="https://akushnirenko10.github.io/project-19/"
+                  class="my-projects-link"
+                >
+                https://akushnirenko10.github.io/project-19/
+                </a>
+                .......................(Team project)
+                <span class="my-projects-bracket">[ </span>HTML5, CSS3 
                 <span class="my-projects-bracket">]</span>
               </span>
             </li>
@@ -52,7 +65,7 @@
                   class="my-projects-link"
                   >https://maxdm2021.github.io/goit-js-hw-11/</a
                 >
-                ............................................
+                ...........................................................
                 <span class="my-projects-bracket">[</span> JavaScript
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -63,7 +76,7 @@
                 <a href="" class="my-projects-link"
                   >In the process of studying...</a
                 >
-                ..............................................................................
+                .............................................................................................
                 <span class="my-projects-bracket">[</span> React.js, Node.js
                 <span class="my-projects-bracket">]</span>
               </span>
