--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My resume</title>
+    <title>CV Maxim Dmitriiev</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -66,6 +66,18 @@
                   >https://maxdm2021.github.io/goit-js-hw-11/</a
                 >
                 ...........................................................
+                <span class="my-projects-bracket">[</span> JavaScript
+                <span class="my-projects-bracket">]</span>
+              </span>
+            </li>
+            <li class="my-projects-item">
+              <span class="my-projects-text">
+                <a
+                  href="https://maxdm2021.github.io/goit-js-hw-11/"
+                  class="my-projects-link"
+                  >https://aleksandor2138.github.io/filmLibrary/</a
+                >
+                .....................(Team project)
                 <span class="my-projects-bracket">[</span> JavaScript
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -181,10 +193,10 @@
               <span class="tech-skills-item-text">JavaScript</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">React.js</span>
+              <span class="tech-skills-item-text">React.js (on study)</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Node.js</span>
+              <span class="tech-skills-item-text">Node.js (on study)</span>
             </li>
           </ul>
         </div>
