--- a/index.html
+++ b/index.html
@@ -95,6 +95,20 @@
             </li>
           </ol>
         </div>
+
+          <!--My education section-->
+          <div class="my-education-section">
+            <h3 class="main-content-title">Education</h3>
+            <h4 class="my-work-experience-company"> GoIT EdTech-company</h4>
+            <h5>Intensive IT courses</h5>
+            <p class="my-work-experience-period">Desember 2021 - December 2022 <span class="my-work-experience-divider">|</span> Ukraine (on-line)</p>
+            <h4 class="my-work-experience-company"> Prydniprovska State Academy of Civil Engineering and Architecture</h4>
+            <h5>industrial and civil construction</h5>
+            <p class="my-work-experience-period">September 2000 - June 2005 <span class="my-work-experience-divider">|</span> Ukraine</p>
+
+
+
+
         <!--my work experience sesction-->
         <div class="my-work-experience-section">
           <h3 class="main-content-title">Work experience</h3>
@@ -105,7 +119,7 @@
               Director
               <span class="my-work-experience-company">MDS-engeeniring  </span>
             </h4>
-            <p class="my-work-experience-period">September 2015 - up to now <span class="my-work-experience-divider">|</span>  Country</p>
+            <p class="my-work-experience-period">September 2015 - up to now <span class="my-work-experience-divider">|</span>  Ukraine</p>
             <ul class="my-work-experience-duties">
               <li class="my-work-experience-duty">
                 Design of cottages, villas, hotels, shops, warehouses</li>
@@ -116,19 +130,20 @@
           <!--Company 2-->
           <div class="my-work-experience-company-block">
             <h4 class="my-work-experience-position">Director <span class="my-work-experience-company">MDS-consruction </span></span></h4>
-            <p class="my-work-experience-period">March 2008 - October 2012 <span class="my-work-experience-divider">|</span>  Country</p>
+            <p class="my-work-experience-period">March 2008 - October 2012 <span class="my-work-experience-divider">|</span>  Ukraine</p>
             <ul class="my-work-experience-duties">
+              <li class="my-work-experience-duty">Construction of cottages, аpartment renovations</li>
               <li class="my-work-experience-duty"> Hospital construction</li>
               <li class="my-work-experience-duty">Construction of filling stations</li>
               <li class="my-work-experience-duty">Construction of industrial facilities</li>
-              <li class="my-work-experience-duty">Construction of cottages, аpartment renovations</li>
+          
             </ul>
           </div>
 
           <!--Company 1-->
           <div class="my-work-experience-company-block">
             <h4 class="my-work-experience-position">Desiner <span class="my-work-experience-company">Desin-Foto/Video studio </span></h4>
-            <p class="my-work-experience-period">June 2003 - February 2008 <span class="my-work-experience-divider">|</span> Country</p>
+            <p class="my-work-experience-period">June 2003 - February 2008 <span class="my-work-experience-divider">|</span> Ukraine</p>
             <ul class="my-work-experience-duties">
               <li class="my-work-experience-duty">
                 Photographer
@@ -138,15 +153,7 @@
             </ul>
           </div>
 
-          <!--My education section-->
-          <div class="my-education-section">
-            <h3 class="main-content-title">Education</h3>
-            <h4 class="my-work-experience-company"> Prydniprovska State Academy of Civil Engineering and Architecture</h4>
-            <h5>industrial and civil construction</h5>
-            <p class="my-work-experience-period">September 2000 - June 2005 <span class="my-work-experience-divider">|</span> Ukraine</p>
-            <h4 class="my-work-experience-company"> GoIT EdTech-company</h4>
-            <h5>Intensive IT courses</h5>
-            <p class="my-work-experience-period">Desember 2021 - November 2022 <span class="my-work-experience-divider">|</span> Ukraine</p>
+
 
 
 
@@ -160,12 +167,19 @@
         <!--contacts section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
+
           <div>
             <span class="contacts-section-tipe"> C:</span>
-            <a class="contacts-section-link" href="tel:+380675600201"
-              >+38 067 560 02 01</a
-            >
-          </div>
+            <a class="contacts-section-link" href="tel:+3530873495865"
+            >+353 087 349 58 65</a
+          >
+        </div>
+        <div>
+          <span class="contacts-section-tipe"> C:</span>
+          <a class="contacts-section-link" href="tel:+380675600201"
+            >+38 067 560 02 01</a
+          >
+        </div>
           <div>
             <span class="contacts-section-tipe"> E: </span>
             <a class="contacts-section-link" href="mailto:maximdm22@gmail.com"
@@ -184,10 +198,10 @@
               <span class="tech-skills-item-text">CSS3</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">GIT</span>
+              <span class="tech-skills-item-text">GitHub</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">WebPack</span>
+              <span class="tech-skills-item-text">WebPack/Parsel</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">JavaScript</span>
