--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <h3 class="sidebar-title">Soft skills</h3>
           <ul class="tech-skills-list">
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">VS-Cod</span>
+              <span class="tech-skills-item-text">VS Code</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">Autocad</span>
