--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <div class="main-content-section">
         <!--about me section-->
         <div class="about-me-section">
-          <h2 class="about-me-profession">Front-End Developer</h2>
-
           <h1 class="about-me-name">Maxim Dmitriiev</h1>
-
+          <h2 class="about-me-profession">Junior front-end developer</h2>
+          <h3 class="main-content-title">Summary</h3>
           <p class="about-me-description">
-           I am hardworking, assiduous, decent, I know how to work in a team, I supervised more than twenty employees, I know how to conduct business negotiations,
+            &nbsp &nbsp  I am hardworking, assiduous, decent, I know how to work in a team, I supervised more than twenty employees, I know how to conduct business negotiations.
+           I am ready to work for a minimum salary in order to gain experience in this profession as soon as possible.
           </p>
         </div>
         <!--my projects section-->
@@ -35,15 +35,29 @@
             <li class="my-projects-item">
               <span class="my-projects-text">
                 <a
+                  href="https://maxdm2021.github.io/goit-js-hw-11/"
+                  class="my-projects-link"
+                  >Filmoteka</a
+                >
+                ..............................................................................................................(Team project)
+                <span class="my-projects-bracket">[</span> JavaScript
+                <span class="my-projects-bracket">]</span>
+              </span>
+              <p class="description">Project about searching movies, and adding favorite movies to a client personal library</p>
+            </li>
+            <li class="my-projects-item">
+              <span class="my-projects-text">
+                <a
                   href="https://maxdm2021.github.io/goit-markup-hw-08/"
                   class="my-projects-link"
                 >
-                https://maxdm2021.github.io/goit-markup-hw-08/
+                Web-Studio
                 </a>
-                .........................................
+                ..........................................................................................................................................
                 <span class="my-projects-bracket">[ </span>HTML5, CSS3
                 <span class="my-projects-bracket">]</span>
               </span>
+              <p class="description">A website with a responsive layout</p>
             </li>
             <li class="my-projects-item">
               <span class="my-projects-text">
@@ -51,47 +65,39 @@
                   href="https://akushnirenko10.github.io/project-19/"
                   class="my-projects-link"
                 >
-                https://akushnirenko10.github.io/project-19/
+               HelloEN
                 </a>
-                .......................(Team project)
+                ...................................................................................................................(Team project)
                 <span class="my-projects-bracket">[ </span>HTML5, CSS3 
                 <span class="my-projects-bracket">]</span>
               </span>
+              <p class="description">A website with a responsive layout. This is a resource for preparation for English UPE</p>
             </li>
             <li class="my-projects-item">
               <span class="my-projects-text">
                 <a
                   href="https://maxdm2021.github.io/goit-js-hw-11/"
                   class="my-projects-link"
-                  >https://maxdm2021.github.io/goit-js-hw-11/</a
+                  >Your favorite picture </a
                 >
-                ...........................................................
+                ...................................................................................................................
                 <span class="my-projects-bracket">[</span> JavaScript
                 <span class="my-projects-bracket">]</span>
               </span>
+              <p class="description">Image search site for designers </p>
             </li>
-            <li class="my-projects-item">
-              <span class="my-projects-text">
-                <a
-                  href="https://maxdm2021.github.io/goit-js-hw-11/"
-                  class="my-projects-link"
-                  >https://aleksandor2138.github.io/filmLibrary/</a
-                >
-                .....................(Team project)
-                <span class="my-projects-bracket">[</span> JavaScript
-                <span class="my-projects-bracket">]</span>
-              </span>
-            </li>
+
 
             <li class="my-projects-item">
               <span class="my-projects-text">
-                <a href="" class="my-projects-link"
-                  >In the process of studying...</a
+                <a href="https://maxdm2021.github.io/goit-react-hw-01-components/" class="my-projects-link"
+                  >Profile, Friends, Statistics, Transactions</a
                 >
-                .............................................................................................
-                <span class="my-projects-bracket">[</span> React.js, Node.js
+                ...............................................................
+                <span class="my-projects-bracket">[</span> React.js
                 <span class="my-projects-bracket">]</span>
               </span>
+              <p class="description">Example of using components, react-dom, @emotion/react, react-icons </p>
             </li>
           </ol>
         </div>
@@ -99,8 +105,8 @@
           <!--My education section-->
           <div class="my-education-section">
             <h3 class="main-content-title">Education</h3>
-            <h4 class="my-work-experience-company"> GoIT EdTech-company</h4>
-            <h5>Intensive IT courses</h5>
+            <h4 class="my-work-experience-company"> IT School GoIT</h4>
+            <h5>Full-stack developer</h5>
             <p class="my-work-experience-period">Desember 2021 - December 2022 <span class="my-work-experience-divider">|</span> Ukraine (on-line)</p>
             <h4 class="my-work-experience-company"> Prydniprovska State Academy of Civil Engineering and Architecture</h4>
             <h5>industrial and civil construction</h5>
@@ -186,7 +192,14 @@
               >maximdm22@gmail.com
             </a>
           </div>
+          <div>
+            <span class="contacts-section-tipe"> G: </span>
+            <a class="contacts-section-link" href="https://github.com/MaxDM2021"
+              >https://github.com/MaxDM2021
+            </a>
+          </div>
         </div>
+        
         <!--tech skills section-->
         <div class="tech-skills-section">
           <h3 class="sidebar-title">Tech skills</h3>
@@ -207,17 +220,14 @@
               <span class="tech-skills-item-text">JavaScript</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">React.js (on study)</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Node.js (on study)</span>
+              <span class="tech-skills-item-text">React.js</span>
             </li>
           </ul>
         </div>
 
         <!--soft skills section-->
         <div class="soft-skills-section">
-          <h3 class="sidebar-title">Soft skills</h3>
+          <h3 class="sidebar-title">Software</h3>
           <ul class="tech-skills-list">
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">VS Code</span>
@@ -233,7 +243,46 @@
             </li>
           </ul>
         </div>
-        <img src="img/foto.jpg" alt="my foto" width="350px"  />
+
+
+                <!--soft skills section-->
+                <div class="soft-skills-section">
+                  <h3 class="sidebar-title">Soft skills</h3>
+                  <ul class="tech-skills-list">
+                    <li class="tech-skills-item">
+                      <span class="tech-skills-item-text">Decent</span>
+                    </li>
+                    <li class="tech-skills-item">
+                      <span class="tech-skills-item-text">Responsible</span>
+                    </li>
+                    <li class="tech-skills-item">
+                      <span class="tech-skills-item-text">Hardworking</span>
+                    </li>
+                    <li class="tech-skills-item">
+                      <span class="tech-skills-item-text">Kind</span>
+                    </li>
+                  </ul>
+                </div>
+
+<!-- Languages -->
+
+<div class="soft-skills-section">
+  <h3 class="sidebar-title">Languages</h3>
+  <ul class="tech-skills-list">
+    <li class="tech-skills-item">
+      <span class="tech-skills-item-text">English Upper Intermediate </span>
+    </li>
+    <li class="tech-skills-item">
+      <span class="tech-skills-item-text">French B1</span>
+    </li>
+    <li class="tech-skills-item">
+      <span class="tech-skills-item-text">Russian native</span>
+    </li>
+    <li class="tech-skills-item">
+      <span class="tech-skills-item-text">Ukrainian native</span>
+    </li>
+  </ul>
+</div>
       </aside>
     </div>
   </body>
