--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             &nbsp &nbsp  I am hardworking, assiduous, decent, I know how to work in a team, I supervised more than twenty employees, I know how to conduct business negotiations.
            I am ready to work for a minimum salary in order to gain experience in this profession as soon as possible.
           </p>
+          <a href="./motiveletter.html" class="my-projects-link"
+          >Read motivation letter</a
+        >
         </div>
         <!--my projects section-->
         <div class="my-projects-section">
@@ -159,6 +162,7 @@
             </ul>
           </div>
 
+        
 
 
 
@@ -262,6 +266,8 @@
                       <span class="tech-skills-item-text">Kind</span>
                     </li>
                   </ul>
+
+
                 </div>
 
 <!-- Languages -->
