--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li class="my-projects-item">
               <span class="my-projects-text">
                 <a
-                  href="https://maxdm2021.github.io/goit-js-hw-11/"
+                  href="https://aleksandor2138.github.io/filmLibrary/"
                   class="my-projects-link"
                   >Filmoteka</a
                 >
