--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   class="my-projects-link"
                   >Filmoteka</a
                 >
-                ..............................................................................................................(Team project)
+                .......................................................................................................(Team project)
                 <span class="my-projects-bracket">[</span> JavaScript
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -56,7 +56,7 @@
                 >
                 Web-Studio
                 </a>
-                ..........................................................................................................................................
+                ..............................................................................................................................
                 <span class="my-projects-bracket">[ </span>HTML5, CSS3
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -70,7 +70,7 @@
                 >
                HelloEN
                 </a>
-                ...................................................................................................................(Team project)
+                .......................................................................................................(Team project)
                 <span class="my-projects-bracket">[ </span>HTML5, CSS3 
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -83,7 +83,7 @@
                   class="my-projects-link"
                   >Your favorite picture </a
                 >
-                ...................................................................................................................
+                ..........................................................................................................
                 <span class="my-projects-bracket">[</span> JavaScript
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -96,7 +96,7 @@
                 <a href="https://maxdm2021.github.io/goit-react-hw-01-components/" class="my-projects-link"
                   >Profile, Friends, Statistics, Transactions</a
                 >
-                ...............................................................
+                ............................................................
                 <span class="my-projects-bracket">[</span> React.js
                 <span class="my-projects-bracket">]</span>
               </span>
@@ -173,7 +173,7 @@
 
       <!--sidebar section-->
       <aside class="sidebar-section">
-        <img src="img/1.jpg" alt="my foto" width="350px" />
+        <img src="img/ок-ok.jpg" alt="my foto" width="352px" />
         <!--contacts section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
