--- a/index.html
+++ b/index.html
@@ -107,15 +107,13 @@
 
           <!--My education section-->
           <div class="my-education-section">
-            <h3 class="main-content-title">Education</h3>
+            <h3 class="main-content-title education">Education</h3>
             <h4 class="my-work-experience-company"> IT School GoIT</h4>
-            <h5>Full-stack developer</h5>
+            <h5 сlass="specialization" >Full-stack developer</h5>
             <p class="my-work-experience-period">Desember 2021 - December 2022 <span class="my-work-experience-divider">|</span> Ukraine (on-line)</p>
             <h4 class="my-work-experience-company"> Prydniprovska State Academy of Civil Engineering and Architecture</h4>
-            <h5>industrial and civil construction</h5>
+            <h5 сlass="specialization"> industrial and civil construction</h5>
             <p class="my-work-experience-period">September 2000 - June 2005 <span class="my-work-experience-divider">|</span> Ukraine</p>
-
-
 
 
         <!--my work experience sesction-->
@@ -173,7 +171,7 @@
 
       <!--sidebar section-->
       <aside class="sidebar-section">
-        <img src="img/ок-ok.jpg" alt="my foto" width="352px" />
+        <img src="img/ок-ok.jpg" alt="my foto" width="350px" />
         <!--contacts section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
