--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
               <li class="my-work-experience-duty">
                 Photographer
               </li>
-              <li class="my-work-experience-duty">Design in Photoshop</li>
-              <li class="my-work-experience-duty">Videographer, video editing</li>
+              <li class="my-work-experience-duty">Design in Photoshop, videographer, video editing</li>
             </ul>
           </div>
 
