--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             &nbsp &nbsp  I am hardworking, assiduous, decent, I know how to work in a team, I supervised more than twenty employees, I know how to conduct business negotiations.
            I am ready to work for a minimum salary in order to gain experience in this profession as soon as possible.
           </p>
-          <a href="./motiveletter.html" class="my-projects-link"
+          <a href="https://maxdm2021.github.io/CV-Maxim-Dmitriev/motiveletter.html" class="my-projects-link"
           >Read motivation letter</a
         >
         </div>
@@ -162,6 +162,35 @@
 
           </div>
         </div>
+
+        <div class="main-content-section">
+          <!--about me section-->
+          <div class="about-me-section">
+            <h1 class="about-me-name">Motivation letter</h1>
+  
+            <h3 class="main-content-title">!&nbsp !&nbsp !</h3>
+  
+            <span class="sir__madam"> &nbsp &nbsp Dear Sir/Madam, </span>
+            <p class="des">
+              &nbsp &nbsp I'm happy to be applying to the currently open IT
+              Specialist position at "Web Dream Technology". I am a Junior Front
+              End Developer and master HTML5, CSS3, JavaScript, React. In addition
+              to this, I have experience with implementing both individual and
+              team projects. Your vacancy is interesting for me as I want to
+              participate in the development of "mobile business aplications for
+              iOS and Android platforms". It is important to me to grow as a Front
+              End developer and put into practice my knowledge in JS and React. It
+              would be an honor to do that at "Web Dream Techology". I'm ready to
+              complete a test task. I'm looking to sharing all my experiences in
+              an interview.
+            </p>
+            <span class="sir__madam">&nbsp &nbsp Maksym Dmtriiev. </span>
+  
+            <h3 class="main-content-title">!&nbsp !&nbsp !</h3>
+          </div>
+  
+          <a href="https://maxdm2021.github.io/CV-Maxim-Dmitriev/index.html" class="my-projects-link">Back to summary</a>
+        </div>
       </div>
 
       <!--sidebar section-->
@@ -282,6 +311,39 @@
     </li>
   </ul>
 </div>
+
+<img src="img/foto.jpg" alt="my foto" width="350px" class="foto-m"/>
+        <!--contacts section-->
+        <div class="contacts-section">
+          <h3 class="sidebar-title">Contacts</h3>
+
+          <div>
+            <span class="contacts-section-tipe"> C:</span>
+            <a class="contacts-section-link" href="tel:+3530873495865"
+              >+353 087 349 58 65</a
+            >
+          </div>
+          <div>
+            <span class="contacts-section-tipe"> C:</span>
+            <a class="contacts-section-link" href="tel:+380675600201"
+              >+38 067 560 02 01</a
+            >
+          </div>
+          <div>
+            <span class="contacts-section-tipe"> E: </span>
+            <a class="contacts-section-link" href="mailto:maximdm22@gmail.com"
+              >maximdm22@gmail.com
+            </a>
+          </div>
+          <div>
+            <span class="contacts-section-tipe"> G: </span>
+            <a class="contacts-section-link" href="https://github.com/MaxDM2021"
+              >https://github.com/MaxDM2021
+            </a>
+          </div>
+        </div>
+
+
       </aside>
     </div>
   </body>
