--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               team projects. Your vacancy is interesting for me as I want to
               participate in the development of your products. It is important to me to grow as a Front
               End developer and put into practice my knowledge in JS and React. It
-              would be an honor to do that at "Web Dream Techology".
+              would be an honor to do that at your company.
             </p>
             <span class="sir__madam">&nbsp &nbsp Maksym Dmtriiev. </span>
   
