--- a/motiveletter.html
+++ b/motiveletter.html
@@ -27,16 +27,13 @@
           <span class="sir__madam"> &nbsp &nbsp Dear Sir/Madam, </span>
           <p class="des">
             &nbsp &nbsp I'm happy to be applying to the currently open IT
-            Specialist position at "Web Dream Technology". I am a Junior Front
+            Specialist position at your company. I am a Junior Front
             End Developer and master HTML5, CSS3, JavaScript, React. In addition
             to this, I have experience with implementing both individual and
             team projects. Your vacancy is interesting for me as I want to
-            participate in the development of "mobile business aplications for
-            iOS and Android platforms". It is important to me to grow as a Front
+            participate in the development of your products. It is important to me to grow as a Front
             End developer and put into practice my knowledge in JS and React. It
-            would be an honor to do that at "Web Dream Techology". I'm ready to
-            complete a test task. I'm looking to sharing all my experiences in
-            an interview.
+            would be an honor to do that at your company.
           </p>
           <span class="sir__madam">&nbsp &nbsp Maksym Dmtriiev. </span>
 
