--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
               </span>
               <p class="description">Example of using components, react-dom, @emotion/react, react-icons </p>
             </li>
+            <li class="my-projects-item">
+              <span class="my-projects-text">
+                <a href="https://maxdm2021.github.io/goit-react-hw-04-images/" class="my-projects-link"
+                  >Search images</a
+                >
+                ............................................................
+                <span class="my-projects-bracket">[</span> React.js
+                <span class="my-projects-bracket">]</span>
+              </span>
+              <p class="description">Example of using components, hooks, toast </p>
+            </li>
+
+
+
+
           </ol>
         </div>
 
