--- a/index.html
+++ b/index.html
@@ -164,14 +164,8 @@
 
           <!--Company 1-->
           <div class="my-work-experience-company-block">
-            <h4 class="my-work-experience-position">Desiner <span class="my-work-experience-company">Desin-Foto/Video studio </span></h4>
+            <h4 class="my-work-experience-position">Desiner <span class="my-work-experience-company">Desin-Foto/Video studio/Photographer/Videographer/Video editing </span></h4>
             <p class="my-work-experience-period">June 2003 - February 2008 <span class="my-work-experience-divider">|</span> Ukraine</p>
-            <ul class="my-work-experience-duties">
-              <li class="my-work-experience-duty">
-                Photographer
-              </li>
-              <li class="my-work-experience-duty">Design in Photoshop, videographer, video editing</li>
-            </ul>
           </div>
 
 
