--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
               >https://github.com/MaxDM2021
             </a>
           </div>
+          <div>
+            <span class="contacts-section-tipe"> L: </span>
+            <a class="contacts-section-link" href="https://www.linkedin.com/in/maxim-dmitriiev-4ab86723b/"
+              >LinkedIN
+            </a>
+          </div>
         </div>
         
         <!--tech skills section-->
