--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <ul class="my-work-experience-duties">
               <li class="my-work-experience-duty">
                 Design of cottages, villas, hotels, shops, warehouses</li>
-              <li class="my-work-experience-duty">Engineering network design, water supply, sewerage, electricity, heating, ventilation, air conditioning</li>
+              <li class="my-work-experience-duty">Engineering network design, water supply, sewerage, electricity, heating, ventilation</li>
               <li class="my-work-experience-duty">Design of hospitals, industrial facilities</li>
             </ul>
           </div>
@@ -140,8 +140,8 @@
             <ul class="my-work-experience-duties">
               <li class="my-work-experience-duty">Construction of cottages, аpartment renovations</li>
               <li class="my-work-experience-duty"> Hospital construction</li>
-              <li class="my-work-experience-duty">Construction of filling stations</li>
-              <li class="my-work-experience-duty">Construction of industrial facilities</li>
+              <!-- <li class="my-work-experience-duty">Construction of filling stations</li>
+              <li class="my-work-experience-duty">Construction of industrial facilities</li> -->
           
             </ul>
           </div>
