--- a/motiveletter.html
+++ b/motiveletter.html
@@ -36,8 +36,8 @@
             would be an honor to do that at your company.
           </p>
           <span class="sir__madam">&nbsp &nbsp Maksym Dmtriiev. </span> <br/>
-          <span class="sir__madam">&nbsp &nbsp Tel: <b>+353 87 349 58 65</b>  </span> <br/>
-          <span class="sir__madam">&nbsp &nbsp WhatsApp: <b>+38 067 560 02 01 </b> </span>
+          <span >&nbsp &nbsp &nbsp Tel: <b class="sir__madam__tel">+353 87 349 58 65</b>  </span> <br/>
+          <span >&nbsp &nbsp  &nbsp WhatsApp: <b class="sir__madam__tel">+38 067 560 02 01 </b> </span>
         
         </div>
 
