--- a/index.html
+++ b/index.html
@@ -85,25 +85,25 @@
               <p class="description">Image search site for designers </br>[JavaScript]</p>
             </li>
 
+            <li class="my-projects-item">
+              <span class="my-projects-text">
+                <a href="https://maxdm2021.github.io/goit-react-hw-05-movies/" class="my-projects-link"
+                  >Search images</a
+                >
+                ..........................................................................................................................................<span><a href="https://maxdm2021.github.io/goit-react-hw-05-movies/" class="link" ><b>[</b>_link_<b>]</b></a></span>
+              </span>
+              <p class="description">Example of using components, hooks, routes, API <br/>[React.js] </p>
+            </li>
 
             <li class="my-projects-item">
               <span class="my-projects-text">
-                <a href="https://maxdm2021.github.io/goit-react-hw-01-components/" class="my-projects-link"
-                  >Profile, Friends, Statistics, Transactions</a
+                <a href="https://maxdm2021.github.io/goit-react-hw-08-phonebook/" class="my-projects-link"
+                  >Phone-Storage</a
                 >
-                .....................................................................<span ><a   href="https://github.com/MaxDM2021/goit-react-hw-01-components" class="link" ><b>[</b>_link_<b>]</b></a></span>
+                ........................................................................................................................................<span ><a   href="https://github.com/MaxDM2021/goit-react-hw-08-phonebook" class="link" ><b>[</b>_link_<b>]</b></a></span>
        
               </span>
-              <p class="description">Example of using components, react-dom, @emotion/react, react-icons<br/>[React.js] </p>
-            </li>
-            <li class="my-projects-item">
-              <span class="my-projects-text">
-                <a href="https://maxdm2021.github.io/goit-react-hw-04-images/" class="my-projects-link"
-                  >Search images</a
-                >
-                ..........................................................................................................................................<span><a href="https://github.com/MaxDM2021/goit-react-hw-04-images" class="link" ><b>[</b>_link_<b>]</b></a></span>
-              </span>
-              <p class="description">Example of using components, hooks, toast <br/>[React.js] </p>
+              <p class="description">Example of using components, react-dom, hooks, routes, redux, API [React.js] </p>
             </li>
 
 
