--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <a href="https://maxdm2021.github.io/goit-react-hw-05-movies/" class="my-projects-link"
                   >Search images</a
                 >
-                ..........................................................................................................................................<span><a href="https://maxdm2021.github.io/goit-react-hw-05-movies/" class="link" ><b>[</b>_link_<b>]</b></a></span>
+                ..........................................................................................................................................<span><a href="https://github.com/MaxDM2021/goit-react-hw-05-movies" class="link" ><b>[</b>_link_<b>]</b></a></span>
               </span>
               <p class="description">Example of using components, hooks, routes, API <br/>[React.js] </p>
             </li>
