--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="main-content-section">
         <!--about me section-->
         <div class="about-me-section">
-          <h1 class="about-me-name">Maxim Dmitriiev</h1>
+          <h1 class="about-me-name">Maksym Dmitriiev</h1>
           <h2 class="about-me-profession">Junior Full-stack developer</h2>
           <h3 class="main-content-title">Summary</h3>
           <p class="about-me-description">
