--- a/index.html
+++ b/index.html
@@ -95,8 +95,28 @@
                 >
               </span>
               <p class="description">
-                Example of using components, react-dom, hooks, routes, redux,
+                Example of using components, react-dom, hooks, routes, 
                 API [React.js]
+              </p>
+            </li>
+            <li class="my-projects-item">
+              <span class="my-projects-text">
+                <a
+                  href="https://keen-cascaron-8399a0.netlify.app/"
+                  class="my-projects-link"
+                  >The flags of the world</a
+                >
+                ........................................................................................................<span
+                  ><a
+                    href="https://github.com/MaxDM2021/bounse-insights-countries-test"
+                    class="link"
+                    ><b>[</b>_link_<b>]</b></a
+                  ></span
+                >
+              </span>
+              <p class="description">
+                Example of using components, react-dom, hooks, routes, redux,
+                API, node.js, Netlify, Render, Cypress [React.js]
               </p>
             </li>
             <li class="my-projects-item">
@@ -357,6 +377,12 @@
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-item-text">Mongodb</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">Netlify/Render/Heroku</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">Cypress/Jest</span>
             </li>
           </ul>
         </div>
