--- a/index.html
+++ b/index.html
@@ -231,7 +231,6 @@
 
           <div class="my-work-experience-company-block">
             <h4 class="my-work-experience-position">
-              Director
               <span class="my-work-experience-company">MDS-engeeniring </span>
             </h4>
             <p class="my-work-experience-period">
@@ -293,7 +292,7 @@
 
       <!--sidebar section-->
       <aside class="sidebar-section">
-        <img src="img/ок-ok.jpg" alt="my foto" width="352px" />
+        <!-- <img src="img/ок-ok.jpg" alt="my foto" width="352px" /> -->
         <!--contacts section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
